gac_sb/objects/Prevision_de_facturation__c.object
<CustomObject>
    <description>SF CONSULTING - permet de saisir des planifications de facturation</description>
    <fields>
        <fullName>Agence__c</fullName>
        <description>champ Canadien</description>
        <label>Agence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>F+P</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annee_pr_vue__c</fullName>
        <formula>YEAR( Date_prevue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Année prévue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annees_CE_concernees__c</fullName>
        <label>Année(s) CE concernée(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annees__c</fullName>
        <label>Année(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Time_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Time Sheet</label>
        <referenceTo>Annual_time_sheet__c</referenceTo>
        <relationshipLabel>Planifications de facturation</relationshipLabel>
        <relationshipName>Planifications_de_facturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apporteur_d_affaire_comptabilise_paye__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apporteur d&apos;affaire comptabilisé/payé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apporteur_d_affaires__c</fullName>
        <formula>TEXT(Contrat__r.Apporteur_d_affaires__c)</formula>
        <label>Apporteur d&apos;affaires</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attente_rectification_des_taux__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attente rectification des taux</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avancement__c</fullName>
        <formula>IF((Contrat__r.Date_de_cloture_exercice__c ==&apos;31 Octobre&apos; || Contrat__r.Date_de_cloture_exercice__c ==&apos;30 Novembre&apos;),
IF((YEAR(Date_prevue__c)-1) == VALUE(TEXT(Mission__r.Annee_concernee__c)) ,true,false),
IF(YEAR(Date_prevue__c)== VALUE(TEXT(Mission__r.Annee_concernee__c)) ,true,false)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avancement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelamento_da_fatura_apos_do_prazo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cancelamento da fatura após do prazo autorizado</description>
        <label>Cancelamento da fatura após do prazo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categorie_d_estimation__c</fullName>
        <label>Catégorie d&apos;estimation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Définitif (forfait)</fullName>
                </value>
                <value>
                    <fullName>Estimé Commercial</fullName>
                </value>
                <value>
                    <fullName>Estimé Pondéré</fullName>
                </value>
                <value>
                    <fullName>Définitif (après obtention)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categorie_estimation__c</fullName>
        <label>Catégorie estimation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIR N-1</fullName>
                </value>
                <value>
                    <fullName>Définitif (après CERFA)</fullName>
                </value>
                <value>
                    <fullName>Définitif (forfait)</fullName>
                </value>
                <value>
                    <fullName>Estimé (technique)</fullName>
                </value>
                <value>
                    <fullName>Estimation commerce</fullName>
                </value>
                <value>
                    <fullName>Forfait journalier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commentaire_prevision__c</fullName>
        <description>Commentaires</description>
        <inlineHelpText>Permet de saisir un commentaire sur la planif.
Par exemple : La raison pour laquelle le client ne souhaite pas saisir le TA</inlineHelpText>
        <label>Commentaires</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_en_charge_de_la_negociation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Commercial en charge de la négociation</description>
        <inlineHelpText>Il faut renseigner le nom du Commercial en charge de la négociation.</inlineHelpText>
        <label>Commercial en charge de la négociation</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5)</booleanFilter>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>contains</operation>
                <value>OPTI</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>contains</operation>
                <value>Pole_OPTIMISATION</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>contains</operation>
                <value>FRANCE_INACTIF_USERS</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>contains</operation>
                <value>GACFRANCE</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <value>005D0000002poZH</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Planifications_de_facturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_apporteur_d_affaires__c</fullName>
        <formula>Contrat__r.Commission_apporteur_d_affaires__c</formula>
        <label>Commission apporteur d&apos;affaires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_validee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission validée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditions_de_facturation__c</fullName>
        <formula>TEXT(Mission__r.Conds_facturation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditions de facturation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contrat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contrat</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Planifications de facturation</relationshipLabel>
        <relationshipName>Planificiations_de_facturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_FDA__c</fullName>
        <description>Date FDA</description>
        <inlineHelpText>Il faut renseigner la date FDA</inlineHelpText>
        <label>Date FDA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Obtention_Interets_Moratoires__c</fullName>
        <description>Date Obtention Intérêts Moratoires</description>
        <inlineHelpText>Permet de saisir la date à laquelle les Intérêts Moratoires ont été obtenus.</inlineHelpText>
        <label>Date Obtention Intérêts Moratoires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_accord__c</fullName>
        <label>Date de l’accord</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_d_HGNF__c</fullName>
        <description>Date d&apos;honoraire gagné non facturé</description>
        <label>Date d&apos;HGNF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_cloture_fiscale__c</fullName>
        <formula>text(Contrat__r.Account.Date_de_cloture_fiscale__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de clôture fiscale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_de_decision_du_TA__c</fullName>
        <description>Date de décision du TA</description>
        <inlineHelpText>Permet de définir la date à laquelle nous avons reçu la décision du TA</inlineHelpText>
        <label>Date de décision du TA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_demande__c</fullName>
        <label>Date de demande</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_depot__c</fullName>
        <label>Date de dépôt réclamation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_la_decision__c</fullName>
        <label>Date de la décision de réclamation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_reponse__c</fullName>
        <label>Date de reponse</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_saisie_du_TA__c</fullName>
        <description>Permet de renseigner la date de saisie du TA</description>
        <inlineHelpText>Permet de renseigner la date de saisie du TA</inlineHelpText>
        <label>Date de saisine du TA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_demande_rectification_taux__c</fullName>
        <label>Date de demande de rectification de taux</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_estime_technique__c</fullName>
        <label>Date d&apos;estimé technique</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_prevision_encaissement__c</fullName>
        <inlineHelpText>Permet d&apos;anticiper la date d&apos;encaissement d&apos;une facture pas encore émise</inlineHelpText>
        <label>Date prévision encaissement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_prevue__c</fullName>
        <label>Date prévue</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degrevements_estimes__c</fullName>
        <label>Dégrèvements estimés</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dossier_rejete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permet d&apos;identifier les planifications de facturation CANADA dont les dossiers ont été rejetés.</description>
        <inlineHelpText>Pour cocher cette case, la prévision HT doit être égale à &quot; 0 &quot; et le type de prévision doit être égale à &quot; Prévision de facturation &quot;</inlineHelpText>
        <label>Dossier rejeté</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dossier_salarie__c</fullName>
        <label>Dossiers salariés</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXT_ID_planif_CA__c</fullName>
        <label>EXT ID planif CA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Etablissement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Etablissement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AppATetablissement__c.Mission__c</field>
                <operation>equals</operation>
                <valueField>$Source.Mission__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AppATetablissement__c</referenceTo>
        <relationshipLabel>Planifications de facturation</relationshipLabel>
        <relationshipName>Planifications_de_facturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Etape__c</fullName>
        <label>Etape</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demande des documents en cours</fullName>
                </value>
                <value>
                    <fullName>Analyse des documents en cours</fullName>
                </value>
                <value>
                    <fullName>Attente validation client</fullName>
                </value>
                <value>
                    <fullName>Avis de crédit obtenu</fullName>
                </value>
                <value>
                    <fullName>Blocage client</fullName>
                </value>
                <value>
                    <fullName>Calcul en cours</fullName>
                </value>
                <value>
                    <fullName>Contrôle à venir</fullName>
                </value>
                <value>
                    <fullName>Contrôle en cours</fullName>
                </value>
                <value>
                    <fullName>Déduction réalisée</fullName>
                </value>
                <value>
                    <fullName>Envoi du projet de réclamation au client</fullName>
                </value>
                <value>
                    <fullName>Préparation de la réclamation</fullName>
                </value>
                <value>
                    <fullName>Dépôt de la réclamation</fullName>
                </value>
                <value>
                    <fullName>Documents à collecter</fullName>
                </value>
                <value>
                    <fullName>Dossier transmis aux organismes</fullName>
                </value>
                <value>
                    <fullName>Mémoire adressé au TA</fullName>
                </value>
                <value>
                    <fullName>En cours d’instruction</fullName>
                </value>
                <value>
                    <fullName>Mise en oeuvre à valider</fullName>
                </value>
                <value>
                    <fullName>Paramétrage en cours</fullName>
                </value>
                <value>
                    <fullName>Paramétré</fullName>
                </value>
                <value>
                    <fullName>Passage en CRA</fullName>
                </value>
                <value>
                    <fullName>Passage en TASS</fullName>
                </value>
                <value>
                    <fullName>Projet de mémoire TA adressé au client</fullName>
                </value>
                <value>
                    <fullName>Projet de mémoire TA validé par le client</fullName>
                </value>
                <value>
                    <fullName>Proposition de saisine du TA envoyée au client</fullName>
                </value>
                <value>
                    <fullName>Refusée</fullName>
                </value>
                <value>
                    <fullName>Validation de la saisine du TA par le client</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
                <value>
                    <fullName>Dossier à 0</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Etape_de_la_mission__c</fullName>
        <formula>TEXT(Mission__r.Etape__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etape de la mission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facture__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facture associée</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Mission__c</field>
                <operation>equals</operation>
                <valueField>Facture__c.Mission__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Id</field>
                <operation>notEqual</operation>
                <value>00eD0000001h8r5</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Facture__c</referenceTo>
        <relationshipLabel>Planifications de facturation liées</relationshipLabel>
        <relationshipName>Planificiations_de_facturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fees_base__c</fullName>
        <label>Fees Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiabilit__c</fullName>
        <label>Fiabilité</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forfait__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forfait</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gouvernement__c</fullName>
        <description>champ pour le Canada</description>
        <label>Gouvernement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fédéral</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HGNF_comptabilise__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case permettant de remplir les champs date d&apos;HGNF et montant HGNF</description>
        <label>HGNF comptabilisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Honoraire_100__c</fullName>
        <description>Champ canadien : 
22% du montant demandé</description>
        <formula>Montant_demand__c *0.22</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Honoraire à 100%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Impact_nouvelle_convention__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>S&apos;il y a un impact nouvelle convention, il faut cocher la case.</inlineHelpText>
        <label>Impact nouvelle convention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interets_moratoires__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Intérêts moratoires</description>
        <inlineHelpText>Cocher la case si des intérêts moratoires sont demandés</inlineHelpText>
        <label>Intérêts moratoires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lieu_d_imposition__c</fullName>
        <label>Lieu d&apos;imposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_Inno_Advance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Permet de relier la prévision de facturation avec la mission Inno-AD correspondante</inlineHelpText>
        <label>Mission Inno-Advance</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipLabel>Planifications de facturation</relationshipLabel>
        <relationshipName>Planifications_de_facturation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Mission__c.Contrat__c</field>
                <operation>equals</operation>
                <valueField>$Source.Contrat__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Id</field>
                <operation>notEqual</operation>
                <value>00eD0000001h8r5</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Planifications de facturation</relationshipLabel>
        <relationshipName>Planifications_de_facturation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mois__c</fullName>
        <formula>CASE(MONTH( Date_prevue__c ),
1, $Label.Mois_Janvier ,
2, $Label.Mois_Fevrier ,
3, $Label.Mois_Mars ,
4, $Label.Mois_Avril ,
5, $Label.Mois_Mai ,
6, $Label.Mois_Juin ,
7, $Label.Mois_Juillet ,
8, $Label.Mois_Aout ,
9, $Label.Mois_Septembre ,
10, $Label.Mois_Octobre ,
11, $Label.Mois_Novembre ,
12, $Label.Mois_Decembre ,&apos;#&apos;) &amp; &apos; &apos; &amp;  TEXT(YEAR( Date_prevue__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mois</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_Inno_AD_del__c</fullName>
        <formula>ValoINNOadvance__r.TECH_CIR_apres_dedu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR definitif après dédu Inno-AD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_CIR_definitif_avant_dedu_Inno_AD__c</fullName>
        <formula>ValoINNOadvance__r.TECH_CIR_avantDedu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant CIR definitif avant dédu Inno-AD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_HGNF__c</fullName>
        <description>montant pour le Canada</description>
        <label>Montant HGNF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_Interets_Moratoires__c</fullName>
        <label>Montant Intérêts Moratoires</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_de_la_commission__c</fullName>
        <formula>Prevision_HT__c * Commission_apporteur_d_affaires__c</formula>
        <label>Montant de la commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_demand__c</fullName>
        <description>champ canadien</description>
        <label>Montant demandé</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_eco_HT__c</fullName>
        <inlineHelpText>Montant des économies perçues par le client</inlineHelpText>
        <label>Montant éco client HT</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_total_gouvernement__c</fullName>
        <formula>CASE( Gouvernement__c ,
&apos;Fédéral&apos;,  Mission__r.Montant_demande_initial_federal__c,
&apos;Provincial&apos;,  Mission__r.Montant_demande_initial_provincial__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant total gouvernement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_x_Fiabilite__c</fullName>
        <description>champ calculé sur les planifications espagnoles : Montant prévu HT x Fiabilité</description>
        <formula>IF(ISBLANK(Fiabilit__c),
Prevision_HT__c,
Prevision_HT__c  *  Fiabilit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>champ calculé sur les planifications espagnoles : Montant prévu HT x Fiabilité</inlineHelpText>
        <label>Montant x Fiabilité</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Motif_attente_facturation__c</fullName>
        <label>Motif attente facturation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appel CPAM</fullName>
                </value>
                <value>
                    <fullName>Attente FDA</fullName>
                </value>
                <value>
                    <fullName>Attente rectification des taux</fullName>
                </value>
                <value>
                    <fullName>Écrêtement</fullName>
                </value>
                <value>
                    <fullName>Prescription URSSAF</fullName>
                </value>
                <value>
                    <fullName>Prêt à facturer</fullName>
                </value>
                <value>
                    <fullName>Valorisation non remise au client</fullName>
                </value>
                <value>
                    <fullName>Dossier non remis</fullName>
                </value>
                <value>
                    <fullName>CERFA pas encore remis au client</fullName>
                </value>
                <value>
                    <fullName>Dépôt du CERFA pas encore effectué</fullName>
                </value>
                <value>
                    <fullName>Attente remboursement</fullName>
                </value>
                <value>
                    <fullName>Heures CRT non communiqués</fullName>
                </value>
                <value>
                    <fullName>Attente cotisation</fullName>
                </value>
                <value>
                    <fullName>Attente vérification</fullName>
                </value>
                <value>
                    <fullName>Facturé</fullName>
                </value>
                <value>
                    <fullName>Attente obtention agrément</fullName>
                </value>
                <value>
                    <fullName>Attente négociation client</fullName>
                </value>
                <value>
                    <fullName>Appel</fullName>
                </value>
                <value>
                    <fullName>Dépôt du dossier d’agrément</fullName>
                </value>
                <value>
                    <fullName>Dépôt du dossier JEI</fullName>
                </value>
                <value>
                    <fullName>Obtention du statut JEI</fullName>
                </value>
                <value>
                    <fullName>Attente économie réalisé lié au statut JEI</fullName>
                </value>
                <value>
                    <fullName>Réception de la notification du CF</fullName>
                </value>
                <value>
                    <fullName>Mission non lancée</fullName>
                </value>
                <value>
                    <fullName>Rapport d’audit à remettre</fullName>
                </value>
                <value>
                    <fullName>Attente du 1er chiffrage</fullName>
                </value>
                <value>
                    <fullName>Attente de la remise des éléments financiers</fullName>
                </value>
                <value>
                    <fullName>Attente confirmation TR</fullName>
                </value>
                <value>
                    <fullName>Attente reconduction de contrat</fullName>
                </value>
                <value>
                    <fullName>Agrément provisoire CIJV pas encore obtenu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>